# cdc-weather-observations

./: Dockerfile  README.md  dbt_project.yml  docker-compose.yaml  extract.py  main.py  makefile  parse_data_dictionary.py  pipeline.py  pyproject.toml  requirements.txt
dbt-project/: .user.yml  dbt_project.yml  profiles.yaml  profiles.yml
dbt-project/macros/: climate_utils.sql
dbt-project/models/marts/: mart_monthly_observations.sql
dbt-project/models/staging/: schema.yml  stg_section1.sql  stg_section3.sql  stg_stations.sql
dbt-project/seeds/: koppen_zones.csv
evidence/: .dockerignore  Dockerfile
evidence/.evidence/customization/: .profile.json
evidence/pages/: index.md
evidence/sources/warehouse/: connection.yaml  mart_climate_anomaly.sql  mart_monthly_observations.sql  mart_station_quality.sql  stations.sql
models/marts/: mart_climate_anomaly.sql  mart_station_quality.sql
models/staging/: sources.yaml  stg_section2.sql  stg_section4.sql
python_scripts/: extract.py  ingest.py  parse_data_dictionary.py
python_scripts/__marimo__/session/: testing.py.json
seeds/: country_codes.csv  enso_years.csv
