[project]
name = "zoomcamp-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dbt-core>=1.11.7",
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.1",
    "marimo>=0.23.1",
    "pandas>=3.0.1",
    "prefect>=3.6.24",
    "pyarrow>=23.0.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]
